Attempt to fix the icon issue on IOS.

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/material-icons.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/material-icons.css
@@ -6,8 +6,8 @@
     src: local('Material Icons'),
     local('MaterialIcons-Regular'),
     url("../font/material-icons/MaterialIcons-Regular.woff2") format('woff2'),
-    url("../font/material-icons/MaterialIcons-Regular.woff") format('woff'),
-    url("../font/material-icons/MaterialIcons-Regular.ttf") format('truetype');
+    url("../font/material-icons/MaterialIcons-Regular.woff") format('woff'), /* Modern Browsers */
+    url("../font/material-icons/MaterialIcons-Regular.ttf") format('truetype'); /* Safari, Android, iOS */
 }
 
 .material-icons {
@@ -23,10 +23,19 @@
     word-wrap: normal;
     direction: ltr;
 
+    /* Support for IE. */
     font-feature-settings: 'liga';
+
+    /* Support for Firefox. */
     -moz-font-feature-settings: 'liga';
+
+    /* Support for all WebKit browsers. */
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
 
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Support for Safari and Chrome. */
     text-rendering: optimizeLegibility;
 }
